@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EvaluateTests.cs" />
+    <Compile Include="Hosting\HostTests.cs" />
     <Compile Include="Language\AgentObjectTests.cs" />
     <Compile Include="Language\BaseBehaviorTests.cs" />
     <Compile Include="Language\BaseIndexedObjectTests.cs" />
