@@ -93,6 +93,9 @@
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Hosting\Host.cs" />
+    <Compile Include="Hosting\IHost.cs" />
+    <Compile Include="Hosting\ObjectProxy.cs" />
     <Compile Include="Language\AgentObject.cs" />
     <Compile Include="Language\BaseBehavior.cs" />
     <Compile Include="Language\BaseClass.cs">
